# copypaster

./: Cargo.toml  README.md
src/: copypast.rs  logging.rs  main.rs  trash_functions.rs
