[package]
name = "copypaster"
version = "0.1.5"
authors = ["Ilya Druzhinin <ilya.druzh@gmail.com>"]
homepage = "https://github.com/ilyadruzhinin/copypaster"
repository = "https://github.com/ilyadruzhinin/copypaster"
documentation = "https://github.com/ilyadruzhinin/copypaster"
readme = "README.md"
license = "Apache-2.0"
keywords = ["copy", "past", "utility", "framework", "exonum"]
categories = ["service"]
description = ""

[dependencies]
clippy = {version = "0.0.131", optional = true}
log = "0.3.8"
chrono = "0.4"
winapi = "*"
user32-sys = "*"
kernel32-sys = "*"
env_logger = "0.3"
colored = "1.5"
tokio = "0.0.0"
walkdir = "1"
rand = "0.3.17"
time = "0.1"
fs_extra = "1.0.0"
same-file = "0.1.3"
futures = "0.1.16"
tokio-core = "0.1.10"
tokio-tls = "0.1.3"
temp_utp = "0.8.1"
utp = "0.7.0"
bittorrent = "0.2.0"
piston = "0.34.0"
piston2d-graphics = "0.23.0"
glib = "0.3.1"
cairo-rs = "0.2.0"
conrod = "0.55.1"
mles = "1.0.0"
net2 = "0.2.31"
iron = "0.5.1"
accumulator = "0.6.0"
hyper = "0.11.6"
tokio-proto = "0.1.1"
dht = "0.0.6"
kademlia = "0.1.0"
